syntax = "proto3";

package auth;

service AuthService {
  rpc signin(SigninRequest) returns (Token) {}
  rpc refreshToken(RefreshTokenRequest) returns (Token) {}
}

message SigninRequest {
  string email = 1;
  string password = 2;
}

message Token {
  string userId = 1;
  string token = 2;
  string type = 3;
  string refreshToken = 4;
  string issuedAt = 5;
  string expireAt = 6;
}

message RefreshTokenRequest {
  string refreshToken = 1;
}

