syntax = "proto3";

package user;
import "profile.proto";
import "query.proto";

service UserService {
    rpc findAll(FindAllParams) returns (UsersMessage);
    rpc findOne(FindOneParams) returns (UserMessage);
    rpc findById(UserId) returns (UserMessage);
    rpc create(CreateUserDto) returns (UserMessage);
    rpc update(UpdateUserDto) returns (UserMessage);
    rpc search(SearchParams) returns (UsersId);
    rpc delete(UserId) returns (UserMessage);
}

message UserId {
    string id = 1;
}

message UsersId {
    repeated UserId usersId = 1;
}

message UserMessage {
    string id = 1;
    string email = 2;
    string password = 3;
    optional ProfileMessage profile = 4;
    string createdAt = 5;
    string updatedAt = 6;
}

message CreateUserDto {
    string email = 1;
    string password = 2;
}

message UpdateUserDto {
    string id = 1;
    optional string email = 2;
    optional string password = 3;
}

message UsersMessage {
    repeated UserMessage users = 1;
}

message FindAllParams {
    optional int32 skip = 1;
    optional int32 take = 2;
    optional UserSelect select = 3;
    optional UserOrderBy orderBy = 4;
    optional UserWhere where = 5;
}

message FindOneParams {
    optional string id = 1;
    optional string email = 2;
    optional string password = 3;
    optional string createdAt = 4;
    optional string updatedAt = 5; 
}

message UserSelect {
    optional bool id = 1;
    optional bool email = 2;
    optional bool password = 3;
    optional bool profile = 4;
    optional bool createdAt = 5;
    optional bool updatedAt = 6;
}

message UserOrderBy {
    optional SortOrder email = 1;
    optional SortOrder password = 2;
    optional SortOrder createdAt = 4;
    optional SortOrder updatedAt = 5;
}

message UserWhere {
    optional StringFilter id = 1;
    optional StringFilter email = 2;
    optional StringFilter password = 3;
    optional StringFilter createdAt = 4;
    optional StringFilter updatedAt = 5;
    repeated UserWhere AND = 6;
    repeated UserWhere OR = 7;
}
